frontend/test/should_pass/pattern_010.grg
pattern Foo
{
	x: Node;
	
	modify(y:Node)
	{
	}
}

rule r
{
	x: Node;
	foo:Foo();

	modify
	{
		foo(x);
	}
}