frontend/test/should_fail/ret_011.grg

rule r : (Node) {
	x: Node;
	y: Node;

	modify {
		return(x);
		return(y);
	}
}
